# sage-dev

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  WIP.md  battery-pack.toml  book.toml  build.rs  rust-toolchain.toml
.agents/skills/next-trait-solver/: SKILL.md
.agents/skills/post-codegen-check/: SKILL.md
.agents/skills/rustc-driver/: SKILL.md
.agents/skills/sage-sanity-check/: SKILL.md
.github/workflows/: benchmarks.yml  xtask.yml
.kiro/skills/rust-analyzer-api/: SKILL.md
.kiro/skills/rust-analyzer-name-resolution/: SKILL.md
.kiro/skills/rustc-name-resolution/: SKILL.md
.kiro/skills/sage-architecture/: SKILL.md
.kiro/skills/salsa/: SKILL.md
.kiro/skills/wip-planning/: SKILL.md
benches/: stash_bench.rs
crates/rust-ref/: Cargo.toml
crates/rust-ref/src/: lib.rs
crates/sage-arena/: Cargo.toml
crates/sage-arena-macros/: Cargo.toml
crates/sage-arena-macros/src/: lib.rs
crates/sage-arena/src/: lib.rs
crates/sage-arena/tests/: arena_tests.rs
crates/sage-emit/: Cargo.toml
crates/sage-emit/src/: lib.rs  main.rs
crates/sage-emit/tests/: hello.rs
crates/sage-infer/: Cargo.toml
crates/sage-infer/src/: bound.rs  check.rs  egraph.rs  infer_ctx.rs  lib.rs  runtime.rs  skeleton.rs  tests.rs  version.rs
crates/sage-ir/: Cargo.toml
crates/sage-ir/src/: body.rs  body_resolve.rs  db.rs  derive.rs  diagnostic.rs  diagnostics.rs  display.rs  dump.rs  generic_param.rs  item.rs  lib.rs  lower.rs  memmap.rs  module.rs  name.rs  resolve.rs  resolved.rs  ribs.rs  scope.rs  sig_ast.rs  sig_lower.rs  source.rs  span.rs  symbol.rs  tcx.rs  tokens.rs  ts_helpers.rs  ty.rs  ty_fold.rs  typed_body.rs  types.rs
crates/sage-ir/src/check/: body.rs  expr.rs  infer_ctx.rs  mod.rs  sig.rs
crates/sage-ir/src/check/infer/: egraph.rs  mod.rs  runtime.rs  skeleton.rs  version.rs
crates/sage-ir/src/check/resolve/: mod.rs  ribs.rs
crates/sage-ir/src/cst/: attrs.rs  check.rs  consts.rs  enums.rs  expr.rs  fns.rs  generics.rs  impls.rs  macro_invocations.rs  mod.rs  mods.rs  paths.rs  statics.rs  structs.rs  traits.rs  ty.rs  type_aliases.rs  uses.rs  where_clause.rs
crates/sage-ir/src/derive/: builtins.rs
crates/sage-ir/src/infer/: bound.rs  check.rs  egraph.rs  infer_ctx.rs  runtime.rs  skeleton.rs  tests.rs
crates/sage-ir/src/local_syms/: consts.rs  enums.rs  fns.rs  impls.rs  intrinsic_types.rs  macro_defs.rs  macro_invocations.rs  mod.rs  mods.rs  statics.rs  structs.rs  traits.rs  type_aliases.rs  uses.rs
crates/sage-ir/src/memmap/: data.rs  expand.rs  mod.rs  resolve_path.rs  seed.rs  validate.rs
crates/sage-ir/src/parse/: attrs.rs  exprs.rs  generics.rs  items.rs  mod.rs  paths.rs  types.rs  util.rs
crates/sage-ir/src/resolve/: mod.rs
crates/sage-ir/src/symbol/: intrinsic.rs  mod.rs
crates/sage-ir/src/tcx/: mod.rs  noop.rs  proxy.rs
crates/sage-ir/src/tytree/: mod.rs
crates/sage-ir/tests/: dump_expanded_module_tests.rs  expand_tests.rs  fixture_harness_tests.rs  item_macro_tests.rs  memmap_incremental_tests.rs  memmap_phase2_tests.rs  memmap_phase3_tests.rs  memmap_tests.rs  sig_ast_tests.rs  sig_lower_query_tests.rs  sig_lower_tests.rs  snapshot_tests.rs  symbol_wrapper_tests.rs  ty_fold_tests.rs  ty_tests.rs
crates/sage-ir/tests/common/: mod.rs
crates/sage-ir/tests/snapshots/: mini_redis_bodies.txt  mini_redis_signatures.txt
crates/sage-macros-from-impls/: Cargo.toml
crates/sage-macros-from-impls/src/: lib.rs
crates/sage-oracle/: Cargo.toml
crates/sage-oracle-harness/: Cargo.toml
crates/sage-oracle-harness/src/: annotations.rs  combined.rs  lib.rs
crates/sage-oracle-harness/tests/: oracle_compare.rs
crates/sage-oracle/src/: emit.rs  lib.rs  main.rs
crates/sage-oracle/tests/: compare.rs  hello.rs
crates/sage-rustc-bridge/: Cargo.toml
crates/sage-rustc-bridge/src/: lib.rs  proc_macro_srv.rs  tcx_impl.rs
crates/sage-stash/: Cargo.toml
crates/sage-stash-macros/: Cargo.toml
crates/sage-stash-macros/src/: lib.rs
crates/sage-stash/src/: lib.rs
crates/sage-stash/tests/: arena_tests.rs
crates/sage-test-harness/: Cargo.toml
crates/sage-test-harness/src/: lib.rs
docs/: trait-solver-analysis.html
md/: README.md  SUMMARY.md
md/design/: README.md  arch.md  architecture.md  arena.md  checking.md  examples.md  ir.md  oracle-test-harness.md  overview.md  spans.md  stash.md  subsetting.md  tenets.md
md/design/research/: README.md  rustc-macro-expansion-ordering.md  rustc-macro-rules.md  rustc-name-resolution.md  rustc-subtyping-and-coercions.md  tree-sitter-rust-grammar.md
md/rfds/: README.md  active.md  async-type-checker.md  completed.md  concurrent-type-checking.md  diagnostics-rendering.md  enum-variant-symbols.md  error-sentinel-type.md  generic-params-as-symbols.md  initial-setup.md  ir-reshape.md  macro-expansion-tracked-query.md  memmap-stash-allocation.md  module-sym-tree.md  numeric-inference-variables.md  oracle-test-framework.md  parse.md  per-kind-symbol-data.md  relative-span-model.md  resolve-at-position.md  stash-faster-collision-chains.md  stash-hash-consing.md  stash-safety.md  symbol-signatures.md  test-harness-external-crates.md  trait-system.md  tuple-struct-ctors.md  type-inference.md  type-signatures.md
src/: driver.rs  lib.rs  main.rs  metadata.rs  proc_macro_srv.rs  tcx_impl.rs
test-fixtures/oracle/basics/: fn_call.rs  hello.rs  let_binding.rs  macro_rules.rs
test-fixtures/oracle/enums/: local_struct_variant_lit.rs  local_tuple_variant_call.rs  local_use_variant.rs  std_option_none.rs  (+4 more)
tests/: body_resolve_tests.rs  docs_freshness.rs  expand_tests.rs  type_check_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+8 files in other folders)
