[workspace]
members = ["crates/*"]
exclude = ["test-fixtures"]
resolver = "3"

[workspace.package]
edition = "2024"

[package]
name = "sage"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cargo-sage"
path = "src/main.rs"

[lib]
name = "sage"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = "1.0.106"
sage-ir = { version = "0.1.0", path = "crates/sage-ir" }
salsa = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
expect-test = "1.5.1"
