[workspace]
members = ["crates/*", "xtask"]
exclude = ["test-fixtures"]
resolver = "3"

[workspace.package]
edition = "2024"

[package]
name = "sage"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cargo-sage"
path = "src/main.rs"

[lib]
name = "sage"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = "1.0.106"
sage-ir = { version = "0.1.0", path = "crates/sage-ir" }
sage-rustc-bridge = { version = "0.1.0", path = "crates/sage-rustc-bridge" }
salsa = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
libfuzzer-sys = "0.4"
sage-stash = { version = "0.1.0", path = "crates/sage-stash" }
rand = "0.10.1"

[[bench]]
name = "stash_bench"
harness = false

[dev-dependencies]
expect-test = "1.5.1"
sage-test-harness = { path = "crates/sage-test-harness" }
