[package]
name = "sage-emit"
version = "0.1.0"
edition.workspace = true

[dependencies]
rust-ref = { version = "0.1.0", path = "../rust-ref" }
sage-ir = { version = "0.1.0", path = "../sage-ir" }
sage-stash = { version = "0.1.0", path = "../sage-stash" }

[dev-dependencies]
expect-test = "1.5.1"
sage-test-harness = { path = "../sage-test-harness" }
salsa = "0.26.1"
serde_json = "1.0"
